@@ -2,10 +2,15 @@ This file shows a history of changes between PrBoom versions since v2.1.0.
 For historical reference, the complete LxDoom changelog follows it.
 
 Changes from v2.4.0 to v2.4.1
+- PrBoom demos are now recorded with high-precision turning (like the
+  "Doom v1.91" hack that is floating around)
 - when both -nodraw and -nosound are supplied, then no graphics will be
   initialized and no windows opened
 - add ultdoom compatibility level, and bring compatibility levels into line
   with Prboom+
+- screenshots now use correct palette in software mode
+- screenshots now in PNG format on Linux/Unix where available
+- suppress use-supershotgun key in compatibility mode
 - removed obsolete video related code
 - fix screenshots on 64bit systems
 - fix comp_666
